- improved decision DFA diagram using more precise B-splines
- added an arrow at the end of each syntax diagram
- check grammar command now also analyze the lexer part of a combined grammar
- popup the console tab if anything is reported in the console
- improved current select path in syntax diagram when switching path visiblity
- improved syntax diagram display (colored label and smaller size)

- fixed a bug where auto-indentation would be applied for a ':' even inside an action block
- fixed a bug where some tokens were not properly colorized (cut and past the same token over itself)
- fixed a bug where the file content was not properly parsed if modified outside ANTLRWorks
- fixed a bug where the analysis indicator was colored improperly
- fixed a bug where Go To Character would be off by one character
- fixed a bug when reading the tokenVocab file (was missing the first character)
- fixed a bug where ANTLR would not be able to read the tokenVocab file (missing path)
- fixed a bug in the code generation (problem with grammar name)
- fixed a bug in the syntax diagram engine where a link from a rule to another rule would start at the wrong state

Version 1.0ea7 - 12/15/05

- fixed a bug which prevented ANTLRWorks to launch on Windows

Version 1.0ea6 - 12/14/05

- new: graphical representation of the parse tree (interpreter and debugger) that
       can also be exported to bitmap or eps
- new: show artificial Tokens rule
- new: click on an input token (debugger) selects the corresponding token in the grammar
       and in the parse tree
- new: breakpoints in input text (right-click to toggle the breakpoint on any tokens)
- new: breakpoints in grammar now works (click in the editor gutter to enable/disable them)
- new: convert literal quote refactoring tools (to single, to double or c-style quote)
- new: now available as a bundle for Mac OS X (can now drag a grammar file to its icon in the dock)
- new: handle now the tokenVocab options
