@@ -151,6 +151,10 @@ public abstract class ComponentEditor implements XJNotificationObserver {
         return null;
     }
 
+    public void componentShouldLayout() {
+
+    }
+
     public void componentDidAwake() {
     }
 
