@@ -1,7 +1,7 @@
 
 * Prio 1
+- check initial splitter position on Windows/Linux
 - ask for string literal for T104 (Tokens artificial SD) -> nameOfExternalReferencedRule() in FAFactory
-- select tree node in debugger parse tree and select input text and grammar
 - stats on grammar (show k or inf on each decision)
 - show code for any decision (Ter ads comments in code)
 - from generated code, jump back to grammar
